fix item-wrap for large screens

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,4 @@
+// a bunch of worthless color
 $f-dark:#1F1F35;
 $f-pink:pink;
 $f-mint:#93ffd6;
@@ -39,6 +40,8 @@ body {
   mix-blend-mode: exclusion;
   .item-wrap {
     width: 100%;
+    height: 75vh;
+    margin: 10% 0;
     svg {
       fill: white;
       height: 600px;
